--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "express": "^4.16.2",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "uniqid": "latest"
   }
 }
